RESOLVED FIXED174010
[iOS DnD] Web content process crashes when the selection is moved far offscreen in dragstart
https://bugs.webkit.org/show_bug.cgi?id=174010
Summary [iOS DnD] Web content process crashes when the selection is moved far offscre...
Wenson Hsieh
Reported 2017-06-29 20:35:28 PDT
Attachments
Patch (8.85 KB, patch)
2017-06-29 20:42 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-06-29 20:42:11 PDT
Wenson Hsieh
Comment 2 2017-06-29 21:16:48 PDT
Comment on attachment 314219 [details] Patch Thanks Tim!
WebKit Commit Bot
Comment 3 2017-06-29 21:44:56 PDT
Comment on attachment 314219 [details] Patch Clearing flags on attachment: 314219 Committed r218988: <http://trac.webkit.org/changeset/218988>
WebKit Commit Bot
Comment 4 2017-06-29 21:44:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.