[iOS DnD] Web content process crashes when the selection is moved far offscreen in dragstart https://bugs.webkit.org/show_bug.cgi?id=174010 <rdar://problem/32597802>

Reviewed by Tim Horton.

Source/WebCore:

The TextIndicator snapshot generated in createDragImageForSelection is not guaranteed to succeed; this patch
adds a null check following TextIndicator::createWithSelectionInFrame and bails early if the snapshot was not
successful.

Test: DataInteractionTests.DoNotCrashWhenSelectionMovesOffscreenAfterDragStart

* platform/ios/DragImageIOS.mm:
(WebCore::createDragImageForSelection):

Tools:

Adds a new API test to ensure that we don't crash trying to dereference a null RefPtr when the TextIndicator
snapshot fails for any reason.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/dragstart-change-selection-offscreen.html: Added.
* TestWebKitAPI/Tests/ios/DataInteractionTests.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/190843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218988 268f45cc-cd09-0410-ab3c-d52691b4dbfc